--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "babel-loader": "^8.0.6",
+    "element-closest": "^3.0.1",
     "es6-promise": "^4.2.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "formdata-polyfill": "^3.0.18",
+    "ie-shim": "^0.1.0",
     "ie11-scroll-into-view": "^1.0.1",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.12.0",
     "nodelist-foreach-polyfill": "^1.2.0",
+    "remove-webpack-plugin": "^1.2.2",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2"
   },
   "dependencies": {
-    "babel-plugin-es6-promise": "^1.1.1"
+    "babel-plugin-es6-promise": "^1.1.1",
+    "classlist-polyfill": "^1.2.0"
   },
   "repository": {
     "type": "git",
